Settings should be in overflow by default, but
show it anyway on device with no menu hardware button

--- a/Respi55/res/menu/main_activity_actions.xml
+++ b/Respi55/res/menu/main_activity_actions.xml
@@ -29,8 +29,9 @@
           android:title="@string/action_about"
           android:icon="@drawable/ic_action_about"
           android:showAsAction="ifRoom" />
+    <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:icon="@drawable/ic_action_settings"
-          android:showAsAction="ifRoom" />
+          android:showAsAction="never" />
 </menu>
